--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "744d2cb0",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "378abf28",
    "metadata": {},
    "outputs": [
@@ -124,6 +124,112 @@
     "plt.plot(arr[:,0], arr[:,1], marker='o')\n",
     "plt.title(\"Sample Plot\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc08ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaussian blur applied and saved as 'blurred_image.jpg'.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "#通過二維陣列實現圖片高斯模糊濾鏡\n",
+    "import numpy as np\n",
+    "import cv2     \n",
+    "def gaussian_blur(image, kernel_size=5, sigma=1.0):\n",
+    "    # 生成高斯核\n",
+    "    kernel = cv2.getGaussianKernel(kernel_size, sigma)\n",
+    "    kernel = np.outer(kernel, kernel)\n",
+    "    \n",
+    "    # 應用高斯模糊\n",
+    "    blurred_image = cv2.filter2D(image, -1, kernel)\n",
+    "    \n",
+    "    return blurred_image\n",
+    "# 讀取圖片\n",
+    "image = cv2.imread('input_image.jpg')\n",
+    "if image is None:\n",
+    "    print(\"Error: Could not read the image.\")\n",
+    "else:\n",
+    "    # 應用高斯模糊\n",
+    "    blurred_image = gaussian_blur(image, kernel_size=5, sigma=1.0)\n",
+    "    \n",
+    "    # 顯示原始圖片和模糊後的圖片\n",
+    "    cv2.imshow('Original Image', image)\n",
+    "    cv2.imshow('Blurred Image', blurred_image)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()    \n",
+    "\n",
+    "# 儲存模糊後的圖片\n",
+    "cv2.imwrite('blurred_image.jpg', blurred_image)\n",
+    "# 輸出結束\n",
+    "# 提示\n",
+    "print(\"Gaussian blur applied and saved as 'blurred_image.jpg'.\")\n",
+    "# 結束\n",
+    "exit()\n",
+    "# 注意：請確保已安裝OpenCV庫，可以使用命令`pip install opencv-python`進行安裝。\n",
+    "# 注意：請確保圖片路徑正確，並且圖片存在於指定的路徑中。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6c8edac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting opencv-python\n",
+      "  Using cached opencv_python-4.11.0.86-cp37-abi3-win_amd64.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\users\\chiuy\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from opencv-python) (2.0.2)\n",
+      "Using cached opencv_python-4.11.0.86-cp37-abi3-win_amd64.whl (39.5 MB)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.11.0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在一个新 cell 里输入并执行：\n",
+    "!pip install opencv-python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "52031873",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "print(cv2.__version__)\n"
    ]
   }
  ],
